Closes #6. Responsive embed.

--- a/sass/_ncg_wordpress.scss
+++ b/sass/_ncg_wordpress.scss
@@ -19,3 +19,11 @@ article {
 		@extend .img-responsive;
 	}
 }
+
+// Responsive items. Ohhhh yeah.
+.embed-container {
+	@extend .embed-responsive, .embed-responsive-16by9;
+	iframe {
+		@extend .embed-responsive-item;
+	}
+}
