bg on home page. Closes #7

--- a/sass/cosmos/_ncg_cosmos.scss
+++ b/sass/cosmos/_ncg_cosmos.scss
@@ -55,6 +55,12 @@ body {
 body:not(.home) {
 	background-image: url('../images/bg.jpg');
 }
+// the background video will not load on mobile so load the bg image on mobile.
+@media screen and (max-width: $screen-xs) {
+    body.home {
+    	background-image: url('../images/bg.jpg');
+    }
+  }
 
 
 a {
